--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <h1 class="header-title">Figuras Geonétricas</h1>
         <p class="header-description">
-            Calacular diferentes medidad de figuras Geométricas 
+            Calacular diferentes medidas de figuras Geométricas 
             como área y perímetro.
         </p>
     </header>
